<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <!-- Purple Toolbar -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@color/colossus_purple"
            android:elevation="4dp"
            app:title="Colossus"
            app:titleTextColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <!-- Logo Image -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="160dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/colossus_logo_desc"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <!-- Register Title -->
        <TextView
            android:id="@+id/register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/register_here"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <!-- Full Name Input -->
        <EditText
            android:id="@+id/name_input_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/black"
            android:hint="@string/full_name"
            android:textColorHint="@color/hint"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_text"
            app:layout_constraintWidth_percent="0.8" />

        <!-- Email Input -->
        <EditText
            android:id="@+id/email_input_register"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:hint="@string/email"
            android:textColorHint="@color/hint"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_input_register"
            app:layout_constraintWidth_percent="0.8" />

        <!-- Password Container -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/password_container"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input_register">

            <EditText
                android:id="@+id/password_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:textColor="@color/black"
                android:textColorHint="@color/hint"
                android:backgroundTint="@color/black"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/toggle_password_visibility"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <ImageView
                android:id="@+id/toggle_password_visibility"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_visibility_off"
                android:contentDescription="@string/toggle_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Register Button -->
        <Button
            android:id="@+id/btn_register"
            android:layout_width="262dp"
            android:layout_height="65dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_button"
            app:backgroundTint="@null"
            android:text="@string/register_button"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_container" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
